public/css/master.css
/* ... */
.left-nav-menu-header{
  color: #EEE;
  padding: 14px 0px 6px 9px;
  font-size: 15px;
}

.nav-logo {
  cursor: pointer;
}

@media (max-width: 643px) {
  .responsive-left-nav {
    display: block;
    width: 200px;
    height: calc(100% + 75px);
    position: fixed;
    z-index: 99999999999;
  }

  .nav-logo {
    display: none;
  }

  .hide-on-small {
    display: none;
  }

  .tab-bar-section {
    margin: 0;
    padding: 0 !important;
  }
}

@media (min-width: 644px) {
  .responsive-left-nav {
    width: 200px;
    height: calc(100% + 75px);
    float: left;
  }

  .player-body {
    width: calc(100% - 200px);
    float: right;
  }

  .hamburger-button {
    display: none;
  }
}

ul.left-nav-menu {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

ul.left-nav-menu li {
  padding: 0.3rem 0.9375rem;
  /* text-transform: uppercase; */
  /* background: #444444; */
  border-top: 1px solid #5e5e5e;
  border-bottom: none;
  margin: 0;
  color: #BBB;
  cursor: pointer;
  font-weight: 800;

  font-family: "Jura", sans-serif;
}

ul.left-nav-menu li:last-child {
  border-bottom: 1px solid #5e5e5e;
}

ul.left-nav-menu li:hover {
  color: #DDD;
}

ul.left-nav-menu li.selected {
  font-weight: bold;
  color: #EEE;
  background: #5a5a6a;
}

.left-nav-menu svg {
  fill: #DDD;
}

ul.left-nav-menu li.selected svg {
  fill: #FFF;
}

.db-status-bar {
  padding-top: 25px;
}

.aboutModal {
  font-family: 'Jura', sans-serif;
}

.login-overlay label {
  font-family: 'Jura', sans-serif;
  font-size: 16px !important;
  font-weight: bold
}

.mobile-links {
  display: flex;
  justify-content: space-between;
}

.mobile-placeholder {
  width: 100%;
}

.app-text {
  padding: 10px 10px;
  font-size: 16px;
  font-weight: 500;
  color: #5a5a5a;
  font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
}

.loading-screen {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 70px;
}

.recently-added-input {
  margin: 0 !important;
  padding: 0 !important;
  max-width: 75px;
  height: 19px !important;
  text-align: center;
}

.super-hide {
  display: none !important;
}

#federation-invite-checkbox-area {
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
}

.federation-invite-thing{
  width: calc(100% - 70px);
  display: inline-block;
}

#federation-invite-selection-panel {
  overflow-y: scroll;
  max-height: 300px;
}

